# django-docker

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  build.sh  dashboard.py  db.sqlite3  docker-compose.yml  menu.py  pyproject.toml  pytest.ini  setup.cfg
app/: __init__.py  settings.py  urls.py  wsgi.py
articles/: __init__.py  settings.py  urls.py
docker/: docker-compose.yml
helpers/: write_articles.py
locale/ru/LC_MESSAGES/: django.po
pools/: admin.py  models.py  serializers.py  urls.py  views.py
pools/migrations/: 0001_initial.py  0002_auto_20211204_1111.py  0003_auto_20211206_1804.py
pools/templatetags/: poll_extras.py
store/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
store/integrations/: clients.py
store/migrations/: 0001_initial.py  0002_auto_20211204_1111.py  0003_auto_20211206_1804.py  0004_auto_20211217_1855.py  0005_auto_20211218_1232.py
store/templatetags/: poll_extras.py
templates/admin/: change_list_object_tools.html  pagination.html
tests/: conftest.py
tests/integration_tests/: conftest.py  test_articles.py  test_books.py  test_journals.py  test_publishers.py
